--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link rel="preload" as="image" href="images/gtr-35.webp">
     <link rel="preload" as="image" href="images/R8.webp">
     <link rel="preload" as="image" href="images/lamborghini-huracan.webp">
-    <link rel="preload" as="image" href="images/photo-1577714141096-bf2b9e69500a.webp">
     <link rel="preload" as="image" href="images/mercedes-gt.webp">
     <link rel="preload" as="image" href="images/BMW-M8.webp">
 </head>
@@ -67,22 +66,22 @@
     <div class="site-banner">
         <div class="site-banner-inner">
             <div class="banner-img">
-                <img src="images/porshe.webp" alt="">
+                <img src="images/porshe.webp" alt="" loading="lazy">
             </div>
             <div class="banner-img">
-                <img src="images/gtr-35.webp" alt="">
+                <img src="images/gtr-35.webp" alt="" loading="lazy">
             </div>
             <div class="banner-img R8">
-                <img src="images/R8.webp" alt="">
+                <img src="images/R8.webp" alt="" loading="lazy">
             </div>
             <div class="banner-img">
-                <img src="images/lamborghini-huracan.webp" alt="">
+                <img src="images/lamborghini-huracan.webp" alt="" loading="lazy">
             </div>
             <div class="banner-img">
-                <img src="images/BMW-M8.webp" alt="">
+                <img src="images/BMW-M8.webp" alt="" loading="lazy">
             </div>
             <div class="banner-img">
-                <img src="images/mercedes-gt.webp" alt="">
+                <img src="images/mercedes-gt.webp" alt="" loading="lazy">
             </div>
         </div>
     </div>
