reduced imgs sizes

--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
     <div class="site-banner">
         <div class="site-banner-inner">
             <div class="banner-img">
-                <img src="images/porshe.webp" alt="" loading="lazy">
+                <img src="images/porshe.webp" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/gtr-35.webp" alt="" loading="lazy">
+                <img src="images/gtr-35.webp" alt="">
             </div>
             <div class="banner-img R8">
-                <img src="images/R8.webp" alt="" loading="lazy">
+                <img src="images/R8.webp" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/lamborghini-huracan.webp" alt="" loading="lazy">
+                <img src="images/lamborghini-huracan.webp" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/BMW-M8.webp" alt="" loading="lazy">
+                <img src="images/BMW-M8.webp" alt="">
             </div>
             <div class="banner-img">
-                <img src="images/mercedes-gt.webp" alt="" loading="lazy">
+                <img src="images/mercedes-gt.webp" alt="">
             </div>
         </div>
     </div>
