reduced the size of the images in the banner

--- a/index.html
+++ b/index.html
@@ -71,11 +71,17 @@
             <div class="banner-img">
                 <img src="images/gtr-35.webp" alt="">
             </div>
+            <div class="banner-img">
+                <img src="images/lamborghini-huracan.webp" alt="">
+            </div>
             <div class="banner-img R8">
                 <img src="images/R8.webp" alt="">
             </div>
             <div class="banner-img">
                 <img src="images/BMW-M8.webp" alt="">
+            </div>
+            <div class="banner-img">
+                <img src="images/mercedes-gt.webp" alt="">
             </div>
         </div>
     </div>
