--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
         </div>
     </div>
-    <script src="banner-animation.js" defer></script>
+    <script src="banner-animation.js" async></script>
     <div class="info-section">
         <h1>Danov's Auto Show</h1>
         <div class="paragraphs">
