Added Auto Show room

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <span class="menuText">Menu</span>
             </button>
             <ul class="menu" id="menu">
-                <li><a class="menuItem" href="#" onclick="setHamburgerRelative(event)"><i class="fas fa-home"></i>
+                <li><a class="menuItem" href="index.html" onclick="setHamburgerRelative(event)"><i class="fas fa-home"></i>
                         Home</a></li>
-                <li><a class="menuItem" href="#" onclick="setHamburgerRelative(event)"><i class="fas fa-car"></i>
+                <li><a class="menuItem" href="auto-show.html" onclick="setHamburgerRelative(event)"><i class="fas fa-car"></i>
                         Auto
                         Show</a></li>
                 <li><a class="menuItem" href="#" onclick="setHamburgerRelative(event)"><i
@@ -46,16 +46,16 @@
         <nav class="navs">
             <nav>
                 <ul>
-                    <li><a href="#"><i class="fas fa-home"></i></a></li>
-                    <li><a href="#"><i class="fas fa-car"></i></a></li>
+                    <li><a href="index.html"><i class="fas fa-home"></i></a></li>
+                    <li><a href="auto-show.html"><i class="fas fa-car"></i></a></li>
                     <li><a href="#"><i class="fas fa-sign-in-alt"></i></a></li>
                     <li><a href="#"><i class="fas fa-info-circle"></i></a></li>
                 </ul>
             </nav>
             <nav>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li class="auto-show"><a href="#">Auto Show</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li class="auto-show"><a href="auto-show.html">Auto Show</a></li>
                     <li><a href="#">Log in</a></li>
                     <li><a href="#">About</a></li>
                 </ul>
