Adjusted and centered 3D Model logic

--- a/showroom.html
+++ b/showroom.html
@@ -59,88 +59,7 @@
     </header>
     <script src="mobile-menu.js"></script>
     <div id="model-container"></div>
-    <script type="module">
-        import * as THREE from 'https://cdn.skypack.dev/three@0.132.2';
-        import { GLTFLoader } from 'https://cdn.skypack.dev/three@0.132.2/examples/jsm/loaders/GLTFLoader';
-        import { OrbitControls } from 'https://cdn.skypack.dev/three@0.132.2/examples/jsm/controls/OrbitControls';
-
-        const container = document.getElementById('model-container');
-        const containerRect = container.getBoundingClientRect();
-
-        const aspectRatio = containerRect.width / containerRect.height;
-        const scene = new THREE.Scene();
-        const camera = new THREE.PerspectiveCamera(75, aspectRatio, 0.1, 1000); // aspect ratio
-        const renderer = new THREE.WebGLRenderer();
-        const controls = new OrbitControls(camera, renderer.domElement);
-
-        // size of the container
-        renderer.setSize(containerRect.width, containerRect.height);
-        container.appendChild(renderer.domElement);
-
-        // camera position
-        function setCameraPosition() {
-            if (containerRect.width > 567) {
-                // Set camera position for widths greater than 567px
-                camera.position.set(35, 10, 40);
-                camera.fov = 25;
-            } else {
-                // Set alternative camera position for widths less than or equal to 567px
-                camera.position.set(50, 10, 30);
-                camera.fov = 25;
-            }
-        }
-
-        setCameraPosition();
-
-        const loader = new GLTFLoader();
-        let model;
-
-        loader.load('3D Models/modified_lamborghini_urus.glb', (gltf) => {
-            model = gltf.scene;
-
-            // timeout to ensure that the model is fully loaded before calculating scale
-            setTimeout(() => {
-                // Adjust model scale
-                const boundingBox = new THREE.Box3().setFromObject(model);
-                const scaleFactor = containerRect.width / boundingBox.getSize().x;
-                model.scale.set(scaleFactor, scaleFactor, scaleFactor);
-
-                // Set model position to the center of the scene
-                model.position.set(0, 0, 0);
-            }, 0);
-
-            scene.add(model);
-        }, undefined, (error) => {
-            console.error('Error loading GLB model:', error);
-        });
-
-        // Directional light
-        const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-        directionalLight.position.set(5, 5, 5).normalize();
-        scene.add(directionalLight);
-
-        function animate() {
-            requestAnimationFrame(animate);
-
-            if (model) {
-                model.rotation.y += 0.005;
-            }
-
-            controls.update();
-            renderer.render(scene, camera);
-        }
-
-        animate();
-
-        window.addEventListener('resize', () => {
-            const containerRect = container.getBoundingClientRect();
-
-            // camera and renderer size on window resize
-            camera.aspect = containerRect.width / containerRect.height;
-            camera.updateProjectionMatrix();
-            renderer.setSize(containerRect.width, containerRect.height);
-        });
-    </script>
+    <script type="module" src="3DModel.js"></script>
     <footer class="footer-section">
         <h3>NEWSLETTER</h3>
         <p>Subscribe to our Newsletter!</p>
